# drunk_man

./: README.md  pyproject.toml
drunk_man/: main.py
drunk_man/drunk_man/: __init__.py  drunk_man.py
drunk_man/typings/: args.py
drunk_man/vector/: __init__.py  vector.py  vector_mode.py
tests/: test_drunk_man.py
